# ocaml-plist-xml

./: .ocamlformat  CHANGES.md  README.md  dune-project  index.html  plist-xml-eio.opam  plist-xml-lwt.opam  plist-xml.opam
.github/workflows/: docs.yml  main.yml
eio/: dune  plist_xml_eio.ml  plist_xml_eio.mli
plist-xml/: index.html
plist-xml-lwt/: index.html
plist-xml-lwt/Plist_xml_lwt/: index.html
plist-xml-lwt/Plist_xml_lwt/Async/: index.html
plist-xml-lwt/Plist_xml_lwt/IO/: index.html
plist-xml/Plist_xml/: index.html
plist-xml/Plist_xml/IO/: index.html
plist-xml/Plist_xml/Make/: index.html
plist-xml/Plist_xml/Make/argument-1-IO/: index.html
plist-xml/Plist_xml/Make/argument-1-S/: index.html
plist-xml/Plist_xml/Sync/: index.html
plist-xml/Plist_xml/module-type-IO/: index.html
plist-xml/Plist_xml/module-type-S/: index.html
plist-xml/Plist_xml/module-type-STREAM/: index.html
src/: common.ml  dune  error.ml  parser.mly  plist_tree.ml  plist_xml.ml  plist_xml.mli  plist_xml_lwt.ml  plist_xml_lwt.mli  token.ml
test/: dune  test.ml  test_chan.ml  test_common.ml  test_eio.ml  test_lwt.ml  test_string.ml  test_sync.ml  testfail.ml  testpass.ml
test/fail/: badbase64.plist
test/pass/: base64.plist
